fix: legend, outside .html, and add scrollbar

--- a/css/home.css
+++ b/css/home.css
@@ -1,3 +1,25 @@
+/* ===== Scrollbar CSS ===== */
+  /* Firefox */
+  * {
+    scrollbar-width: auto;
+    scrollbar-color: #ce2020 #000000;
+  }
+
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 16px;
+  }
+
+  *::-webkit-scrollbar-track {
+    background: #000000;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: #ce2020;
+    border-radius: 10px;
+    border: 3px solid #000000;
+  }
+
 .first {
   height: 1000px;
 }
@@ -33,8 +55,6 @@
   left: 70%;
   margin-right: -50%;
   transform: translate(-50%, -50%);
-  /* border: 1px solid red; */
-  /* margin: 0 auto; */
 }
 .madmaggie-image {
   margin-top: 70px;
